# badezimmer

./: .dockerignore  .releaserc.json  CHANGELOG.md  Dockerfile  Dockerfile.front  Dockerfile.water-leak  README.md  Taskfile.yaml  docker-compose.yaml  hello.py  pyproject.toml
.github/workflows/: release.yaml
badezimmer-home-page/: .gitignore  package-lock.json  package.json
badezimmer-home-page/app/: layout.tsx  page.tsx
badezimmer-home-page/components/: device-card.tsx  device-controls.tsx  device-grid.tsx
badezimmer-home-page/lib/: device-types.ts  grpc-client.ts
gateway/: pyproject.toml
gateway/src/gateway/: __init__.py  main.py
go-water-leak/: .gitignore  README.md  go.mod  main.go  mdns.go
go-water-leak/badezimmer/: badezimmer.pb.go
proto/: badezimmer.proto  gateway.proto  light_lamp.proto
src/badezimmer/: __init__.py  badezimmer_pb2.py  badezimmer_pb2.pyi  badezimmer_pb2_grpc.py  browser.py  info.py  logger.py  mdns.py  tcp.py
src/fartdetector/: __init__.py
src/gateway/: __init__.py  main.py
src/lightlamp/: __init__.py
src/sink/: __init__.py
src/toilet/: __init__.py
