[project]
name = "badezimmer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "asyncio>=4.0.0",
  "fastapi[standard]>=0.122.0",
  "ifaddr>=0.2.0",
  "protobuf>=6.33.1",
  "python-json-logger>=2.0.7",
  "zeroconf>=0.148.0",
]

[tool.uv]
package = true

[project.scripts]
gateway = "gateway:main"
lightlamp = "lightlamp:main"
