[project]
name = "gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Said Rodrigues", email = "coderflemis@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
gateway = "gateway:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
